--- a/css/numbers.css
+++ b/css/numbers.css
@@ -1,7 +1,7 @@
 /* 3.6 NUMBERS SECTION......................................................................................... */
 .numbers {
     position: relative;
-    background-image: url(../images/l-1.jpg);
+    background-image: url(../Images/l-1.jpg);
     height:350px;
     background-position: center ;
     background-repeat: no-repeat;
