--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -2,7 +2,7 @@
 
 .testimonial {
    position: relative;
-   background-image: url(../images/l-2.jpg);
+   background-image: url(../Images/l-2.jpg);
    height:350px;
    background-position: center ;
    background-repeat: no-repeat;
